--- a/templates/authors/authors.html
+++ b/templates/authors/authors.html
@@ -81,5 +81,8 @@
     color: #2d6a4f !important;
     text-decoration: underline !important;
 }
+body {
+    padding-top: 70px;
+}
     </style>
 {% endblock %}
