--- a/templates/authors/authors_books.html
+++ b/templates/authors/authors_books.html
@@ -136,5 +136,8 @@
     background: #1b4332 !important;
     box-shadow: 0 4px 12px rgba(45, 106, 79, 0.3);
 }
+body {
+    padding-top: 70px;
+}
     </style>
 {% endblock %}
