--- a/templates/books/books.html
+++ b/templates/books/books.html
@@ -56,4 +56,10 @@
             {% endfor %}
         </div>
     </div>
+    <style>
+body {
+    padding-top: 70px;
+}
+
+    </style>
 {% endblock %}
